chore(cors): Simplify CORS configuration and disable credentials with wildcard origins
- Remove commented-out alternative origin configurations from both CorsConfig and SecurityConfig
- Disable credentials (setAllowCredentials to false) to comply with wildcard origin patterns
- Add X-Requested-With to exposed headers in both configuration classes
- Standardize List.of() usage instead of Arrays.asList() for consistency
- Simplify comments to clarify wildcard origin behavior and credential restrictions
- Ensure CORS configuration works correctly with wildcard origins across all endpoints